--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.0
 filelock==3.13.1
+Flask==3.0.0
 flatbuffers==23.5.26
 fonttools==4.45.1
 fqdn==1.5.1
@@ -47,6 +48,7 @@ ipykernel==6.26.0
 ipython==8.18.0
 ipywidgets==8.1.1
 isoduration==20.11.0
+itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.2
 Js2Py==0.74
